新增图书类型管理类表
